# vc-sqnm

./: README.md  pyproject.toml
sqnm/: free_or_fixed_cell_sqnm.py  historylist.py  periodic_sqnm.py  sqnm.py  vcsqnm_for_ase.py
